--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-    <br>
     <!-- Header -->
     <header>
         <div>
@@ -19,20 +18,15 @@
             <nav></nav>
         </div>
     </header>
-
-    <br>
     <!-- Main -->
     <main>
         <h1>Homepage</h1>
-        <br>
         <!-- Hero section -->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
             </div>
         </section>
-
-        <br>
         <!-- Services section -->
         <section>
             <div>
@@ -49,10 +43,7 @@
                     <h3>Social Media</h3>
                 </div>
             </div>
-
         </section>
-
-        <br>
         <!-- Works section -->
         <section>
             <div>
@@ -73,9 +64,7 @@
                 </div>
             </div>
         </section>
-
-        <br>
-        <!-- About us section -->
+        <!-- About Us section -->
         <section>
             <div>
                 <header>
@@ -85,21 +74,28 @@
                 <div>
                     <h3>Who are we</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium
-                        cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
-                        atque maxime cum!</p>
+                        cumque
+                        accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
+                        atque
+                        maxime
+                        cum!</p>
                     <h3>Our culture</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium
-                        cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
-                        atque maxime cum!</p>
+                        cumque
+                        accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
+                        atque
+                        maxime
+                        cum!</p>
                     <h3>How we work</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium
-                        cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
-                        atque maxime cum!</p>
+                        cumque
+                        accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
+                        atque
+                        maxime
+                        cum!</p>
                 </div>
             </div>
         </section>
-
-        <br>
         <!-- Latest news section -->
         <section>
             <div>
@@ -110,28 +106,31 @@
                     <article>
                         <p>Career</p>
                         <h3>Hoc loco tenere se Triarius non potuit.</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo
+                            tandem
                             modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </article>
                     <article>
                         <p>Digital Life</p>
                         <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain
-                            tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille:
+                            Ain
+                            tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos
+                            commodius
                             agimus. An nisi populari fama?</p>
                     </article>
                     <article>
                         <p>Social</p>
                         <h3>Bestiarum vero nullum iudicium puto.</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a
-                            Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est
-                            docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+                            Chrysippo
+                            praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas,
+                            memoria;
+                            Apparet statim, quae sint officia, quae actiones.</p>
                     </article>
                 </div>
             </div>
         </section>
-
-        <br>
         <!-- Testimonials section -->
         <section>
             <div>
@@ -146,8 +145,6 @@
                 </div>
             </div>
         </section>
-
-        <br>
         <!-- Contact section -->
         <section>
             <div>
@@ -157,16 +154,17 @@
                 </header>
                 <div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
-                        modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                        modo? At
+                        eum nihili facit; Quae contraria sunt his, malane?</p>
                 </div>
             </div>
         </section>
     </main>
-
-    <br>
     <!-- Footer -->
     <footer>
-        <div>footer</div>
+        <div>
+            Footer
+        </div>
     </footer>
 </body>
 
