--- a/0x00-html_advanced/20-index.html
+++ b/0x00-html_advanced/20-index.html
@@ -14,10 +14,19 @@
     <!-- Header -->
     <header>
         <div>
-            <span>Techium</span>
-            <nav></nav>
+            <div><a href="/"><span>Techium</span></a></div>
+            <nav>
+                <a href="/">Home</a>
+                <a href="">Services</a>
+                <a href="">Works</a>
+                <a href="">About</a>
+                <a href="">Latest news</a>
+                <a href="">Testimonials</a>
+                <a href="">Contact</a>
+            </nav>
         </div>
     </header>
+
     <!-- Main -->
     <main>
         <h1>Homepage</h1>
@@ -27,6 +36,7 @@
                 <h2>We help you build your brand!</h2>
             </div>
         </section>
+
         <!-- Services section -->
         <section>
             <div>
@@ -43,7 +53,9 @@
                     <h3>Social Media</h3>
                 </div>
             </div>
+
         </section>
+
         <!-- Works section -->
         <section>
             <div>
@@ -64,7 +76,8 @@
                 </div>
             </div>
         </section>
-        <!-- About Us section -->
+
+        <!-- About us section -->
         <section>
             <div>
                 <header>
@@ -74,28 +87,20 @@
                 <div>
                     <h3>Who are we</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium
-                        cumque
-                        accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
-                        atque
-                        maxime
-                        cum!</p>
+                        cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
+                        atque maxime cum!</p>
                     <h3>Our culture</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium
-                        cumque
-                        accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
-                        atque
-                        maxime
-                        cum!</p>
+                        cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
+                        atque maxime cum!</p>
                     <h3>How we work</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium
-                        cumque
-                        accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
-                        atque
-                        maxime
-                        cum!</p>
+                        cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
+                        atque maxime cum!</p>
                 </div>
             </div>
         </section>
+
         <!-- Latest news section -->
         <section>
             <div>
@@ -106,31 +111,27 @@
                     <article>
                         <p>Career</p>
                         <h3>Hoc loco tenere se Triarius non potuit.</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo
-                            tandem
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
                             modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </article>
                     <article>
                         <p>Digital Life</p>
                         <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille:
-                            Ain
-                            tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos
-                            commodius
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain
+                            tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius
                             agimus. An nisi populari fama?</p>
                     </article>
                     <article>
                         <p>Social</p>
                         <h3>Bestiarum vero nullum iudicium puto.</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a
-                            Chrysippo
-                            praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas,
-                            memoria;
-                            Apparet statim, quae sint officia, quae actiones.</p>
+                            Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est
+                            docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                     </article>
                 </div>
             </div>
         </section>
+
         <!-- Testimonials section -->
         <section>
             <div>
@@ -145,6 +146,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Contact section -->
         <section>
             <div>
@@ -154,17 +156,15 @@
                 </header>
                 <div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
-                        modo? At
-                        eum nihili facit; Quae contraria sunt his, malane?</p>
+                        modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                 </div>
             </div>
         </section>
     </main>
+
     <!-- Footer -->
     <footer>
-        <div>
-            Footer
-        </div>
+        <div>footer</div>
     </footer>
 </body>
 
