--- a/0x00-html_advanced/21-index.html
+++ b/0x00-html_advanced/21-index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html dir="ltr" lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Homepage - Techium</title>
-    <meta name="description" content="Techium is a digital agency">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon.png">
+    <meta charset="utf-8" />
+    <meta name="viewport" content=" width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="description" content="Techium is a digital agency" />
+    <title> Homepage - Techium </title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
 </head>
 
 <body>
-    <!-- Header -->
-    <header>
-        <div>
-            <div><a href="/"><span>Techium</span></a></div>
+    <div>
+        <br>
+        <!-- header -->
+        <header>
+            <div>
+                <span>Techium</span>
+                <a href="/"></a>
+            </div>
             <nav>
                 <a href="/">Home</a>
                 <a href="#services">Services</a>
@@ -24,12 +28,14 @@
                 <a href="#testimonials">Testimonials</a>
                 <a href="#contact">Contact</a>
             </nav>
-        </div>
-    </header>
+        </header>
+    </div>
 
+    <br>
     <!-- Main -->
     <main>
         <h1>Homepage</h1>
+        <br>
         <!-- Hero section -->
         <section>
             <div>
@@ -37,6 +43,7 @@
             </div>
         </section>
 
+        <br>
         <!-- Services section -->
         <section>
             <div>
@@ -53,9 +60,9 @@
                     <h3>Social Media</h3>
                 </div>
             </div>
-
         </section>
 
+        <br>
         <!-- Works section -->
         <section>
             <div>
@@ -77,7 +84,8 @@
             </div>
         </section>
 
-        <!-- About us section -->
+        <br>
+        <!-- About Us section -->
         <section>
             <div>
                 <header>
@@ -86,21 +94,31 @@
                 </header>
                 <div>
                     <h3>Who are we</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium
-                        cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
-                        atque maxime cum!</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
+                        praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste
+                        dicta
+                        quibusdam atque maxime cum!
+                    </p>
                     <h3>Our culture</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium
-                        cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
-                        atque maxime cum!</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
+                        praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste
+                        dicta
+                        quibusdam atque maxime cum!
+                    </p>
                     <h3>How we work</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium
-                        cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam
-                        atque maxime cum!</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
+                        praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste
+                        dicta
+                        quibusdam atque maxime cum!
+                    </p>
                 </div>
             </div>
         </section>
 
+        <br>
         <!-- Latest news section -->
         <section>
             <div>
@@ -111,27 +129,32 @@
                     <article>
                         <p>Career</p>
                         <h3>Hoc loco tenere se Triarius non potuit.</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
-                            modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo
+                            tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </article>
                     <article>
                         <p>Digital Life</p>
                         <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain
-                            tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius
-                            agimus. An nisi populari fama?</p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille:
+                            Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos
+                            commodius agimus. An nisi populari fama?
+                        </p>
                     </article>
                     <article>
                         <p>Social</p>
                         <h3>Bestiarum vero nullum iudicium puto.</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a
                             Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est
-                            docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+                            docilitas, memoria; Apparet statim, quae sint officia, quae actiones.
+                        </p>
                     </article>
                 </div>
             </div>
         </section>
 
+        <br>
         <!-- Testimonials section -->
         <section>
             <div>
@@ -147,6 +170,7 @@
             </div>
         </section>
 
+        <br>
         <!-- Contact section -->
         <section>
             <div>
@@ -161,13 +185,13 @@
             </div>
         </section>
     </main>
-
+    <br>
     <!-- Footer -->
     <footer>
         <div>
             <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
-            <a href="https://www.twitter.com/holbertonSchool/">Twitter</a>
-            <a href="https://www.instagram.com/holbertonSchool/">Instagram</a>
+            <a href="https://twitter.com/holbertonschool">Twitter</a>
+            <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
         </div>
     </footer>
 </body>
