--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -116,7 +116,7 @@
                         quibusdam atque maxime cum!
                     </p>
                 </div>
-                <a href="./about.html">Learn more about us</a>
+                <a href="about.html">Learn more about us</a>
             </div>
         </section>
 
@@ -184,7 +184,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
                         modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                 </div>
-                <a href="./contact.html">Get in touch</a>
+                <a href="contact.html">Get in touch</a>
             </div>
         </section>
     </main>
