--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html dir="ltr" lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Styleguide - Techium</title>
-    <meta name="description" content="Techium is a digital agency">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon.png">
+    <meta charset="utf-8" />
+    <meta name="viewport" content=" width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="description" content="Techium is a digital agency" />
+    <title> Styleguide - Techium </title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
 </head>
 
 <body>
     <header>
+
     </header>
     <main>
         <section>
@@ -25,6 +26,7 @@
             <h5>Heading level 5</h5>
             <h6>Heading level 6</h6>
         </section>
+
         <section>
             <header>
                 <h2>Paragraph</h2>
@@ -56,15 +58,15 @@
                 <h3>Definition</h3>
                 <dl>
                     <dt>Definition List title</dt>
-                    <dd>Definition text.</dd>
+                    <dd>Definition text</dd>
                     <dt>Startup</dt>
                     <dd>A startup company or startup is a company or temporary organization designed to search for a
-                        repeatable and scalable
-                        business model.</dd>
+                        repeatable
+                        and scalable business model.</dd>
                     <dt>Water</dt>
                     <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is
-                        the basis of the fluids of
-                        living organisms.</dd>
+                        the basis of
+                        the fluids of living organisms.</dd>
                 </dl>
             </div>
         </section>
@@ -89,12 +91,11 @@
             <div>
                 <h3>Blockquote</h3>
                 <blockquote>
-                    <cite>Kanye West, Musician</cite>
-                    <p>will be the leader of a company that ends up being worth billions of dollars, because I got the
-                        answers. I understand
-                        culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities,
-                        to show people, this is
-                        the level that things could be at.</p>
+                    <p>
+                        I will be the leader of a company that ends up being worth billions of dollars, because I got
+                        the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I
+                        have, to push possibilities, to show people, this is the level that things could be at
+                        <cite>Kanye West, Musician</cite></p>
                 </blockquote>
             </div>
         </section>
@@ -104,28 +105,20 @@
                 <h2>Typography</h2>
             </header>
             <div>
-                <address>
-                    320 Stewart Avenue, Unit 12
-                    <br>
-                    New York City NY 10001
-                </address>
+                <address>320 Stewart Avenue, Unit 12 <br> New York City NY 10001</address>
             </div>
             <div>
                 <pre>
-              <code>
-                   <h2>My title</h2>
-                   <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
-               </code>
-            </pre>
+                    <code>
+                        <h2>My title</h2>
+                        <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
+                    </code>
+                </pre>
             </div>
             <div>
-                <p>
-                    Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget
-                    dapibus erat
-                    finibus sed. Aenean condimentum sapien magna, eleifend
-                    <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies
-                    <mark>highlighted</mark> ut sed metus.
-                </p>
+                <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget
+                    dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi
+                    consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
             </div>
         </section>
         <!-- Table -->
@@ -151,7 +144,9 @@
                         <td>May 25th, 1977</td>
                     </tr>
                     <tr>
-                        <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
+                        <th scope="row">
+                            Star Wars: Episode V - The Empire Strikes Back
+                        </th>
                         <td>Irvin Kershner</td>
                         <td>May 21st, 1980</td>
                     </tr>
@@ -163,9 +158,12 @@
                 </tbody>
             </table>
         </section>
+
+
     </main>
-    <footer>
-    </footer>
+
+    <footer></footer>
+
 </body>
 
 </html>
