--- a/0x03-responsive_design/04-index.html
+++ b/0x03-responsive_design/04-index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='03-styles.css'>
+    <link rel='stylesheet' href='04-styles.css'>
 </head>
 
 <body>
@@ -183,13 +183,13 @@
                 <div class="section-body">
                     <div class="row">
                         <div class="col-1-2">
-                            <img
-                                sizes="(max-width: 3000px) 40vw, 1200px"
+                            <img 
+                                sizes="(max-width: 3000px) 40vw, 1200px" 
                                 srcset="
-                                    images/pic-about-01_enljdc_c_scale,w_380.jpg 380w,
-                                    images/pic-about-01_enljdc_c_scale,w_962.jpg 962w,
-                                    images/pic-about-01_enljdc_c_scale,w_1200.jpg 1200w"
-                                src="images/pic-about-01_enljdc_c_scale,w_1200.jpg"
+                                    pic-about-01_a4apin_c_scale,w_380.jpg 380w,
+                                    pic-about-01_a4apin_c_scale,w_962.jpg 962w,
+                                    pic-about-01_a4apin_c_scale,w_1200.jpg 1200w"
+                                src="pic-about-01_a4apin_c_scale,w_1200.jpg"
                                 alt="">
                         </div>
                         <div class="col-1-2">
@@ -225,13 +225,13 @@
                             <article class="card-blog">
                                 <div>
                                     <img
-                                    sizes="(max-width: 3000px) 40vw, 1200px"
-                                    srcset="
-                                        images/pic-article-01_z5fq3f_c_scale,w_380.jpg 380w,
-                                        images/pic-article-01_z5fq3f_c_scale,w_997.jpg 997w,
-                                        images/pic-article-01_z5fq3f_c_scale,w_1200.jpg 1200w"
-                                    src="mages/pic-article-01_z5fq3f_c_scale,w_1200.jpg"
-                                    alt="">
+                                        sizes="(max-width: 3000px) 40vw, 1200px"
+                                        srcset="
+                                            pic-article-01_zlvy4t_c_scale,w_380.jpg 380w,
+                                            pic-article-01_zlvy4t_c_scale,w_997.jpg 997w,
+                                            pic-article-01_zlvy4t_c_scale,w_1200.jpg 1200w"
+                                        src="pic-article-01_zlvy4t_c_scale,w_1200.jpg"
+                                        alt="">
                                 </div>
                                 <p class="card-category">Career</p>
                                 <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -243,14 +243,15 @@
                         <li class="col-1-3">
                             <article class="card-blog">
                                 <div>
-                                    <img
-                                    sizes="(max-width: 3000px) 40vw, 1200px"
-                                    srcset="
-                                        images/pic-article-02_lk5iw1_c_scale,w_380.jpg 380w,
-                                        images/pic-article-02_lk5iw1_c_scale,w_861.jpg 861w,
-                                        images/pic-article-02_lk5iw1_c_scale,w_1200.jpg 1200w"
-                                    src="images/pic-article-02_lk5iw1_c_scale,w_1200.jpg"
-                                    alt="">
+                                    <img 
+                                        sizes="(max-width: 3000px) 40vw, 1200px"
+                                        srcset="
+                                            pic-article-02_y5ixsj_c_scale,w_380.jpg 380w,
+                                            pic-article-02_y5ixsj_c_scale,w_861.jpg 861w,
+                                            pic-article-02_y5ixsj_c_scale,w_1200.jpg 1200w"
+                                        src="pic-article-02_y5ixsj_c_scale,w_1200.jpg"
+                                        alt=""
+                                    >
                                 </div>
                                 <p class="card-category">Digital Life</p>
                                 <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
@@ -264,14 +265,13 @@
                             <article class="card-blog">
                                 <div>
                                     <img
-                                    sizes="(max-width: 3000px) 40vw, 1200px"
-                                    srcset="
-                                        images/pic-article-03_ogbc6g_c_scale,w_380.jpg 380w,
-                                        images/pic-article-03_ogbc6g_c_scale,w_946.jpg 946w,
-                                        images/pic-article-03_ogbc6g_c_scale,w_1200.jpg 1200w"
-                                    src="images/pic-article-03_ogbc6g_c_scale,w_1200.jpg"
-                                    alt="">
-
+                                        sizes="(max-width: 3000px) 40vw, 1200px"
+                                        srcset="
+                                            pic-article-03_nowgzo_c_scale,w_380.jpg 380w,
+                                            pic-article-03_nowgzo_c_scale,w_946.jpg 946w,
+                                            pic-article-03_nowgzo_c_scale,w_1200.jpg 1200w"
+                                        src="pic-article-03_nowgzo_c_scale,w_1200.jpg"
+                                        alt="">
                                 </div>
                                 <p class="card-category">Social</p>
                                 <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
