--- a/0x03-responsive_design/04-index.html
+++ b/0x03-responsive_design/04-index.html
@@ -21,6 +21,8 @@
                         <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
                     </a>
                 </div>
+                <input type="checkbox" id="menu-btn" class="menu-btn">
+                <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
                 <nav class="navbar-menu">
                     <ul class="nav">
                         <li class="nav-item">
